# components/api-server/src/client.rs
@@ -38,20 +38,20 @@ pub struct QueryConfig {
 
     /// The beginning timestamp (in epoch milliseconds) for the search range (inclusive).
     #[serde(default)]
-    pub begin_timestamp: Option<i64>,
+    pub time_range_begin_millisecs: Option<i64>,
 
     /// The ending timestamp (in epoch milliseconds) for the search range (inclusive).
     #[serde(default)]
-    pub end_timestamp: Option<i64>,
+    pub time_range_end_millisecs: Option<i64>,
 
     /// Whether the string match should be case-insensitive.
     #[serde(default)]
     pub ignore_case: bool,
 
-    /// Whether to write the search results to files. If `false`, results will be stored in
+    /// Whether to write the search results to files. If `true`, results will be stored in
     /// `MongoDB`.
     #[serde(default)]
-    pub write_to_file: bool,
+    pub buffer_results_in_mongodb: bool,
 }
 
 impl From<QueryConfig> for SearchJobConfig {
@@ -60,10 +60,10 @@ impl From<QueryConfig> for SearchJobConfig {
             dataset: value.dataset,
             query_string: value.query_string,
             max_num_results: value.max_num_results,
-            begin_timestamp: value.begin_timestamp,
-            end_timestamp: value.end_timestamp,
+            begin_timestamp: value.time_range_begin_millisecs,
+            end_timestamp: value.time_range_end_millisecs,
             ignore_case: value.ignore_case,
-            write_to_file: value.write_to_file,
+            write_to_file: !value.buffer_results_in_mongodb,
             ..Default::default()
         }
     }
