# docs/src/_static/generated/api-server-openapi.json
@@ -44,11 +44,11 @@
               "example": {
                 "query_string": "*",
                 "dataset": "default",
-                "begin_timestamp": 0,
-                "end_timestamp": 17356896,
+                "time_range_begin_millisecs": 0,
+                "time_range_end_millisecs": 17356896,
                 "ignore_case": true,
                 "max_num_results": 0,
-                "write_to_file": false
+                "buffer_results_in_mongodb": true
               }
             }
           },
@@ -119,13 +119,9 @@
           "query_string"
         ],
         "properties": {
-          "begin_timestamp": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int64",
-            "description": "The beginning timestamp (in epoch milliseconds) for the search range (inclusive)."
+          "buffer_results_in_mongodb": {
+            "type": "boolean",
+            "description": "Whether to write the search results to files. If `true`, results will be stored in\n`MongoDB`."
           },
           "dataset": {
             "type": [
@@ -133,14 +129,6 @@
               "null"
             ],
             "description": "The dataset to search within. If not provided, only `default` dataset will be searched."
-          },
-          "end_timestamp": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int64",
-            "description": "The ending timestamp (in epoch milliseconds) for the search range (inclusive)."
           },
           "ignore_case": {
             "type": "boolean",
@@ -156,9 +144,21 @@
             "type": "string",
             "description": "The search query as a KQL string."
           },
-          "write_to_file": {
-            "type": "boolean",
-            "description": "Whether to write the search results to files. If `false`, results will be stored in\n`MongoDB`."
+          "time_range_begin_millisecs": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int64",
+            "description": "The beginning timestamp (in epoch milliseconds) for the search range (inclusive)."
+          },
+          "time_range_end_millisecs": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int64",
+            "description": "The ending timestamp (in epoch milliseconds) for the search range (inclusive)."
           }
         },
         "additionalProperties": false
